--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.earthpol</groupId>
     <artifactId>AntiClaimHop</artifactId>
-    <version>1.0</version>
+    <version>1.0-NoSiegeWar</version>
     <packaging>jar</packaging>
 
     <name>AntiClaimHop</name>
@@ -80,12 +80,6 @@
             <groupId>com.github.TownyAdvanced</groupId>
             <artifactId>Towny</artifactId>
             <version>0.97.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.TownyAdvanced</groupId>
-            <artifactId>SiegeWar</artifactId>
-            <version>0.7.3</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
